# rust-udiffx

./: Cargo.toml  README.md
dev/specs/: spec-concept.md
docs/for-llm/: api-reference-for-llm.md
examples/: c02-apply.rs
src/: applier.rs  extract.rs  fs_guard.rs  lib.rs  security_policy.rs
src/patch_completer/: complete.rs  parse.rs  tests.rs
src/prompt/: prompt-file-changes.md
tests/: tests_changes.rs  tests_patches.rs
tests/data/: changes-no-head-nums.md  changes-patch-mixed-actionable.md  changes-patch-unactionable-only.md  changes-simple.md  changes-with-code-fence.md
tests/data/test-patches/test-00-tmp/: changes.txt
tests/data/test-patches/test-01-crlf/: changes.txt
tests/data/test-patches/test-02-append/: changes.txt
tests/data/test-patches/test-03-no-matching-empty-line/: changes.txt  original.txt
tests/data/test-patches/test-04-no-end-line/: changes.txt
tests/data/test-patches/test-05-missplaced/: changes.txt
tests/data/test-patches/test-06-no-match/: changes.txt  original.txt
tests/data/test-patches/test-07-new-line/: changes.txt
tests/data/test-patches/test-08-missmatch/: changes.txt
tests/data/test-patches/test-09-fuzzy-ticks/: changes.txt
tests/data/test-patches/test-10/: changes.txt
tests/data/test-patches/test-11-append-with-empty-surround/: changes.txt
tests/data/test-patches/test-12-append-with-white-end-surround/: changes.txt
tests/data/test-patches/test-13-append-trailing-blank-context/: changes.txt
tests/data/test-patches/test-14-removal-suffix/: changes.txt  original.txt
(+9 files in other folders)
