[package]
name = "udiffx"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Parse and apply LLM-optimized unified diff + XML file changes"
homepage = "https://github.com/zcoder-run/rust-udiffx"
repository = "https://github.com/zcoder-run/rust-udiffx"
categories = [
  "development-tools",
  "parser-implementations",
  "filesystem"
]
keywords = [
  "diff",
  "patch",
  "unified-diff",
  "llm",
  "code-editing"
]

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[features]
test-support = []
prompt = []

# local dev
[patch.crates-io]
# markex = { path = ".../rust-markex" }

[dependencies]
# -- Files
simple-fs = { version = "0.12.1"}
# -- Diff & Text
diffy = "0.5"
markex = { version = "0.3.0"}
# -- Tracing
tracing = "0.1"
# -- Others
derive_more = { version = "2", features = ["from", "display"] }

[dev-dependencies]
udiffx = { path = ".", features = ["test-support"] }
assertables = "10"
